--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.0",
     "@radix-ui/react-dialog": "^1.0.3",
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "18.16.3",
@@ -27,7 +28,8 @@
     "react-toastify": "^9.1.2",
     "swr": "^2.1.5",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.0"
